[package]
name = "axum_gatekeeper"
version = "0.1.0"
readme = "README.md"
repository = "https://github.com/tstaetter/axum-gatekeeper"
license = "MIT"
authors = ["Thomas Stätter <thomas.staetter@gmail.com"]
keywords = ["axum", "authorization", "bearer-token", "api", "security"]
edition = "2021"

[features]
default = ["full"]
full = ["authentication", "authorization", "verification"]
authentication = ["dep:cookie"]
authorization = []
verification = ["dep:base64"]

[dependencies]
axum = { version = "0.8.1", features = ["http2", "macros"] }
base64 = { version = "0.22", optional = true }
chrono = { version = "0.4.39", features = ["serde", "now"] }
cookie = { version = "0.18.1", optional = true }
jsonwebtoken = "9.3.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
thiserror = "2"
tracing = "0.1.41"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }

[dev-dependencies]
anyhow = "1.0.95"
http-body-util = "0.1.2"
